                  s/^LOAD /csp_LOAD /; s/(SUHS)/(csp_SUHS)/g; \
                  s/^SUH /csp_SUH /; s/^SUHS /csp_SUHS /' $f; done
   % find . -name install.mk | while read f; \
       do sed -i 's/^SRDIRS /csp_SUHDIRS /g' $f; done

  This kinda worked for me.  YMMV.
- New variables csp_TABOO{DIRS,FILES}_{ADD,SKIP} in caspar.mk.  See caspar(7).


caspar version 20040721

- This release is planned to get shipped with Debian: it will be available
  from the Debian archive.
- No functional changes, just some minor documentation updates and tweaks of
  the build system (interesting only for people building a tarball from CVS).


caspar version 20040531

- The caspar CVS is moved to http://alioth.debian.org/.  Thanks to the Alioth
  admins!
- Experimental install-recursive target added.  If you'd like to play with it,
  you won't need to adjust your Makefile's.  Just type `make install-recursive'
  and decide wether you like this feature.
- BEWARE! Change in user interface!  caspar.mk variables have been renamed:

   new name     old name
   ========     ========

   csp_CP       CP
   csp_CPFLAGS  CPFLAGS
   csp_CPDIR    CDIR
   csp_CPDIRS   CPDIRS
   csp_LOAD     LOAD
   csp_SCP      SCP
   csp_SCPFLAGS SCPFLAGS
   csp_SCPDIR   SDIR
   csp_SUH      SUH
   csp_SUHS     SUHS
   csp_SUHDIRS  SRDIRS

  This is done to make sure no unexpected name clashes occur.

  For now, we offer a backward compatibility hack: your old Makefile's will
  continue to work.  However, you're advised to switch to the new user
  interface a.s.a.p.


caspar version 20030825

- CPFLAGS and SCPFLAGS added to caspar.mk.  See caspar(7), as well as the
  caspar.mk file itself.


caspar version 20030809

- Added manpages caspar(7) and caspar-typesetting(7).  Installed in
  /usr[/local]/share/doc/caspar too, in various formats.


caspar version 20030803

- See doc/ChangeLog.2002 for news about caspar 20030803 and earlier

# $Id: NEWS,v 1.52 2009-11-14 08:12:13 joostvb Exp $