@@ -1,4 +1,4 @@
-$Id: README,v 1.19 2009-03-15 22:05:43 joostvb Exp $
+# This file is maintained at http://git.mdcc.cx/caspar
 
 caspar - Makefile snippets for common tasks
 
