@@ -1,8 +1,6 @@
 \: vim:syntax=tex
 \: this is a manpage in zoem format.  see http://micans.org/zoem/ and man_zmm(7)
-
-\: $Id: casparize.azm,v 1.4 2009-11-14 08:12:16 joostvb Exp $
-\: $Source: /cvsroot/caspar/caspar/caspar/doc/casparize.azm,v $
+\: This file is maintained at http://git.mdcc.cx/caspar
 
 \:  casparize script manpage
 \:  Copyright (C) 2009  Jeroen Hoppenbrouwers
