@@ -1,4 +1,4 @@
-\: $Id: include.zmm,v 1.5 2006-06-10 13:54:09 joostvb Exp $
+\: This file is maintained at http://git.mdcc.cx/caspar
 
 \: This file is free software; you can distribute it and/or modify it
 \: under the terms of the GNU GPL.  See the file COPYING.
