@@ -1,8 +1,4 @@
 ## Process this file with automake to produce Makefile.in
-## $Id: Makefile.am,v 1.5 2009-11-14 07:01:52 joostvb Exp $
-## $Source: /cvsroot/caspar/caspar/caspar/script/Makefile.am,v $
 
 bin_SCRIPTS = casparize csp_install csp_scp_keep_mode csp_sucp
-
 EXTRA_DIST = $(bin_SCRIPTS)
-
