@@ -1,7 +1,6 @@
 #!/bin/sh
 
-# $Id: csp_sucp,v 1.7 2006-12-12 09:29:16 joostvb Exp $
-# $Source: /cvsroot/caspar/caspar/caspar/script/csp_sucp,v $
+# This file is maintained at http://git.mdcc.cx/caspar
 
 #
 # csp_sucp - mix scp with sudo
