@@ -1,4 +1,4 @@
-# $Id: setversion,v 1.6 2009-09-26 02:20:55 joostvb Exp $
+# This file is maintained at http://git.mdcc.cx/caspar
 
 # This script is free software; you can distribute it and/or modify it
 # under the terms of the GNU GPL.  See the file COPYING.
