@@ -1,9 +1,6 @@
 ## Process this file with automake to produce Makefile.in
-## $Id: Makefile.am,v 1.2 2003-08-02 22:06:58 joostvb Exp $
 
 PACKAGE = @PACKAGE_TARNAME@
-
 sgmldir = $(datadir)/sgml/$(PACKAGE)
 sgml_DATA = print.dsl html.dsl
 EXTRA_DIST = $(sgml_DATA)
-
