@@ -319,4 +319,5 @@ caspar version 20030803
 
 - See doc/ChangeLog.2002 for news about caspar 20030803 and earlier
 
-# $Id: NEWS,v 1.52 2009-11-14 08:12:13 joostvb Exp $
+# This file is maintained at http://git.mdcc.cx/caspar
+
